# lgtm-otel-demo

./: README.md  docker-compose.yaml  setup.sh
DemoService/: DotnetService.sln
DemoService/DemoService/: DemoService.csproj  Dockerfile  Program.cs
alloy/: config.alloy
demo-api/: Dockerfile  pyproject.toml
demo-api/src/demo_api/: __main__.py  cache.py  routes.py
grafana/: datasources.yaml
grafana/dashboards/: red.json
loadgen/: Dockerfile  loadgen.py
locust/: Dockerfile  locustfile.py
otel/: otel-config.yml
prometheus/: prometheus-config.yaml
